--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 click==8.0.3
-Flask==2.0.2
+Flask==3.0.3
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 itsdangerous==2.0.1
@@ -8,3 +8,5 @@ MarkupSafe==2.0.1
 PyMySQL==1.0.2
 SQLAlchemy==1.4.29
 Werkzeug==2.0.2
+Flask-Limiter==3.8.0
+requests==2.32.3
