--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-click==8.0.3
 Flask==3.0.3
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.2
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-PyMySQL==1.0.2
-SQLAlchemy==1.4.29
-Werkzeug==2.0.2
 Flask-Limiter==3.8.0
 requests==2.32.3
+flask_sqlalchemy==3.1.1
+greenlet==3.1.1
+sqlalchemy==2.0.36
+pymysql==1.1.1
