--- a/default.conf
+++ b/default.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name localhost;
 
+    access_log /app/logs/nginx-access.log;
+    error_log /app/logs/nginx-error.log;
+
     location / {
         proxy_pass http://127.0.0.1:5000;
         proxy_set_header Host $host;
