--- a/default.conf
+++ b/default.conf
@@ -6,7 +6,7 @@ server {
     error_log /app/logs/nginx-error.log;
 
     location / {
-        proxy_pass http://10.32.0.179:5000;
+        proxy_pass https://flask-128833-8-1331398562.sh.run.tcloudbase.com:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
